[package]
name = "asor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.0"
once_cell = "1.7.2"
async-task = "4.0.3"
lazy_static = "1.4.0"

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]
